--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,10 @@
 
     </head>
     <body>
-
+         
         <h1>Aqui vamos a hacer  2 bLOG blog post</h1>
         <p> y este es el parrafo</p>
+        <p>SEGUNDO PARRAFO </p>
+
     </body>
 </html>
