commit de cabecera para merge

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
         <h1>Aqui vamos a hacer  2 bLOG blog post</h1>
         <p> y este es el parrafo</p>
         <p>SEGUNDO PARRAFO </p>
-        <p>cabecera</p>
+        <p>cabecera para merge</p>
 
     </body>
 </html>
