--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
         <p> y este es el parrafo</p>
         <p>SEGUNDO PARRAFO </p>
         <p>cabecera</p>
+        <p>parrafo rama3 para merge</p>
 
     </body>
 </html>
